--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
 /*  your css code here. If applicable */
+body {
+    margin: 0;
+    overflow: hidden; /* Prevent scrollbars */
+}
+
+#line {
+    width: 200px;
+    height: 2px;
+    background-color: #000000;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform-origin: center; /* Set the rotation point to the center */
+    transform: translate(-50%, -50%); /* Center the line */
+}
